RESOLVED FIXED241470
Fix invalid isInShadowRoot flag during input element removal
https://bugs.webkit.org/show_bug.cgi?id=241470
Summary Fix invalid isInShadowRoot flag during input element removal
Claudio Saavedra
Reported 2022-06-09 09:21:43 PDT
Fix invalid isInShadowRoot flag during input element removal
Attachments
Patch (2.02 KB, patch)
2022-06-09 09:34 PDT, Claudio Saavedra
no flags
Claudio Saavedra
Comment 1 2022-06-09 09:34:22 PDT
EWS
Comment 2 2022-06-09 14:36:53 PDT
Committed r295436 (251442@main): <https://commits.webkit.org/251442@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 460134 [details].
Radar WebKit Bug Importer
Comment 3 2022-06-09 14:37:14 PDT
Note You need to log in before you can comment on or make changes to this bug.