Cherry-pick ce15efd51dda. rdar://problem/93160436

Fix invalid isInShadowRoot flag during input element removal
    https://bugs.webkit.org/show_bug.cgi?id=241470

    Reviewed by Ryosuke Niwa.

    Style invalidation of input elements might rely on whether the element
    is in the shadow tree, but during node removal the isInShadowRoot flag
    might not be up-to-date. Ensure that the flag is updated by
    letting Node::removedFromAncestor() be called up first in the
    HTMLInputNode::removedFromAncestor() implementation, before
    doing anything else with the node post-removal.

    * Source/WebCore/html/HTMLInputElement.cpp:
    (WebCore::HTMLInputElement::removedFromAncestor):

    Canonical link: https://commits.webkit.org/251442@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295436 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.706@safari-613-branch